.metadata/.plugins/org.eclipse.cdt.ui/DDR5_TestPlatform.build.log
17:35:31 **** Incremental Build of configuration Debug for project DDR5_TestPlatform ****
make -j16 all 
arm-none-eabi-gcc "C:/Users/Xavi/Documents/UOC/DDR5_Test_Platform_XR/Papers/STM32H563ZIT6/DDR5_TestPlatform/Core/Src/main.c" -mcpu=cortex-m33 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32H563xx -c -I../../Core/Inc -I../../Drivers/STM32H5xx_HAL_Driver/Inc -I../../Drivers/STM32H5xx_HAL_Driver/Inc/Legacy -I../../Drivers/CMSIS/Device/ST/STM32H5xx/Include -I../../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Application/User/Core/main.d" -MT"Application/User/Core/main.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Application/User/Core/main.o"
C:/Users/Xavi/Documents/UOC/DDR5_Test_Platform_XR/Papers/STM32H563ZIT6/DDR5_TestPlatform/Core/Src/main.c: In function 'main':
C:/Users/Xavi/Documents/UOC/DDR5_Test_Platform_XR/Papers/STM32H563ZIT6/DDR5_TestPlatform/Core/Src/main.c:130:3: error: 'st' undeclared (first use in this function)
  130 |   st = I3C_SDR_ReadReg(0x50, 0x00, data, 1);
      |   ^~
C:/Users/Xavi/Documents/UOC/DDR5_Test_Platform_XR/Papers/STM32H563ZIT6/DDR5_TestPlatform/Core/Src/main.c:130:3: note: each undeclared identifier is reported only once for each function it appears in
At top level:
C:/Users/Xavi/Documents/UOC/DDR5_Test_Platform_XR/Papers/STM32H563ZIT6/DDR5_TestPlatform/Core/Src/main.c:547:26: warning: 'Test_SETAASA' defined but not used [-Wunused-function]
  547 | static HAL_StatusTypeDef Test_SETAASA(void)
      |                          ^~~~~~~~~~~~
C:/Users/Xavi/Documents/UOC/DDR5_Test_Platform_XR/Papers/STM32H563ZIT6/DDR5_TestPlatform/Core/Src/main.c:66:16: warning: 'sbb_rx_buf' defined but not used [-Wunused-variable]
   66 | static uint8_t sbb_rx_buf[16];
      |                ^~~~~~~~~~
C:/Users/Xavi/Documents/UOC/DDR5_Test_Platform_XR/Papers/STM32H563ZIT6/DDR5_TestPlatform/Core/Src/main.c:65:16: warning: 'sbb_tx_buf' defined but not used [-Wunused-variable]
   65 | static uint8_t sbb_tx_buf[16];
      |                ^~~~~~~~~~
make: *** [Application/User/Core/subdir.mk:31: Application/User/Core/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

17:35:32 Build Failed. 2 errors, 3 warnings. (took 697ms)

